# musashi-ros2-humble

./: README.md
basestation/: README.md  package.xml
basestation/musashi_basestation/: README.md  package.xml  setup.cfg  setup.py
basestation/musashi_basestation/config/: rqt_basestation_plugins.rqt  rqt_player_control.rqt
basestation/musashi_basestation/launch/: bringup.launch.py  rqt_basestation.launch.py
basestation/musashi_basestation/test/: test_musashi_basestation.py
basestation/musashi_rqt_player_controller/: README.md  package.xml  plugin.xml  setup.cfg  setup.py
basestation/musashi_rqt_player_controller/launch/: rqt_player_controller.launch.py
basestation/musashi_rqt_player_controller/resource/: player_controller.ui
basestation/musashi_rqt_player_controller/scripts/: player_controller
basestation/musashi_rqt_player_server/: README.md  package.xml  plugin.xml  setup.py
basestation/musashi_rqt_player_server/config/: player_server_params.yaml
basestation/musashi_rqt_player_server/launch/: rqt_player_server.launch.py
basestation/musashi_rqt_player_server/resource/: player_server.ui
basestation/musashi_rqt_player_server/scripts/: player_server
basestation/musashi_rqt_refereebox_client/: README.md  plugin.xml  setup.py
basestation/musashi_rqt_refereebox_client/config/: refereebox_client_params.yaml
basestation/musashi_rqt_refereebox_client/launch/: rqt_refereebox_client.launch.py
basestation/musashi_rqt_refereebox_client/resource/: refereebox_client.ui
basestation/musashi_rviz/: README.md  package.xml  setup.cfg  setup.py
basestation/musashi_rviz/rviz/: config.rviz
(+43 files in other folders)
