<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>basestation</name>
  <version>0.0.0</version>
  <description>Meta-package for musashi basestation components</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>musashi_rqt_refereebox_client</depend>
  <depend>musashi_rqt_player_controller</depend>
  <depend>musashi_rqt_player_server</depend>
  <depend>musashi_rviz</depend>
  <depend>musashi_basestation</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>